# atsf4g-co

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  cmake_dev.sh  cmake_dev_mbedtls.bat  cmake_dev_openssl.bat  cmake_dev_openssl_win32.bat  cmake_release.sh
atframework/: CMakeLists.txt  atframework.macro.cmake
atframework/export/: CMakeLists.txt
atframework/export/atgw_inner_v1_c/: CMakeLists.export.txt  CMakeLists.txt
atframework/g3log/: g3log.cmake
atframework/g3log/src/: CMakeLists.txt  logcapture.cpp
atframework/libshapp/: CMakeLists.txt  libshapp.cmake
atframework/libshapp/include/: shapp.h  shapp_conf.h  shapp_log.h  shapp_module_impl.h
atframework/libshapp/sample/: CMakeLists.txt  sample.cpp
atframework/libshapp/src/: CMakeLists.txt  shapp.cpp  shapp_log.cpp  shapp_module_impl.cpp
atframework/service/: CMakeLists.txt
atframework/service/atgateway/: CMakeLists.txt  atgateway.cpp  session.cpp
atframework/service/atgateway/protocols/: libatgw_server_protocol.h  proto_base.cpp
atframework/service/atgateway/protocols/inner_v1/: libatgw_proto_inner.cpp  libatgw_proto_inner_generated.h
atframework/service/atproxy/: CMakeLists.txt  atproxy.cpp  atproxy_manager.cpp  atproxy_manager.h  node_proxy.cpp  node_proxy.h
atframework/service/atproxy/libatproxy_cli/: CMakeLists.txt  atproxy.cmake  atproxy_build_feature.h  atproxy_cli.cpp  atproxy_cli.h  atproxy_cli_module.cpp  atproxy_cli_module.h
atframework/service/atproxy/protocols/: libatproxy_proto.h
atframework/service/component/: CMakeLists.txt
atframework/service/component/config/: atframe_service_types.h  atframe_services_build_feature.h.in
atframework/service/component/etcdcli/: etcd_cluster.cpp  etcd_cluster.h  etcd_def.h  etcd_keepalive.cpp  etcd_keepalive.h  etcd_packer.cpp  etcd_packer.h  etcd_watcher.cpp  etcd_watcher.h
atframework/service/component/modules/: etcd_module.cpp  etcd_module.h  etcd_module_utils.cpp  etcd_module_utils.h  sh_module.cpp  sh_module.h  shapp_etcd_module.cpp  shapp_etcd_module.h
atframework/service/test/: CMakeLists.txt  main.cpp
atframework/service/test2/: CMakeLists.txt  main.cpp
atframework/service/test3/: CMakeLists.txt  main.cpp
atframework/service/test4/: CMakeLists.txt  main.cpp
project/cmake/: ProjectTools.cmake
sample/: CMakeLists.txt
sample/atgw_cli_inner_hello/: hello.cpp
src/: CMakeLists.txt
src/echosvr/: CMakeLists.txt
src/echosvr/app/: echosvr_main.cpp
src/gamesvr/: CMakeLists.txt
src/gamesvr/app/: gamesvr_main.cpp  handle_cs_msg.cpp  handle_ss_msg.cpp
src/gamesvr/data/: player.cpp  player.h
src/gamesvr/logic/action/: task_action_ping.cpp  task_action_player_async_jobs.cpp  task_action_player_info_get.cpp  task_action_player_kickoff.cpp  task_action_player_login.cpp  task_action_player_login.h  task_action_player_remote_patch_jobs.cpp
src/loginsvr/: CMakeLists.txt
src/loginsvr/app/: loginsvr_main.cpp
src/loginsvr/logic/: task_action_login_authorization.cpp  task_action_login_authorization.h
src/server_frame/: CMakeLists.txt  server_frame.cmake
src/server_frame/config/: excel_config_const_index.cpp  excel_config_const_index.h  extern_service_types.h  logic_config.cpp  logic_config.h  server_frame_build_feature.h  server_frame_build_feature.h.in
src/server_frame/data/: player_cache.cpp  player_cache.h  session.cpp  session.h
src/server_frame/dispatcher/: actor_action_cs_req_base.cpp  actor_action_cs_req_base.h  actor_action_no_req_base.cpp  actor_action_no_req_base.h  actor_action_ss_req_base.cpp  actor_action_ss_req_base.h  cs_msg_dispatcher.cpp  cs_msg_dispatcher.h  db_msg_dispatcher.cpp  dispatcher_implement.h  dispatcher_type_defines.h  ss_msg_dispatcher.cpp  ss_msg_dispatcher.h  task_action_base.cpp  task_action_base.h  task_action_cs_req_base.cpp  task_action_cs_req_base.h  task_action_no_req_base.h  task_action_ss_req_base.cpp  task_action_ss_req_base.h  task_manager.cpp  task_manager.h
src/server_frame/logic/: player_manager.cpp  player_manager.h  session_manager.cpp
src/server_frame/logic/action/: task_action_player_logout.cpp
src/server_frame/protocol/: generate_proto_source.cmake
src/server_frame/protocol/pbdesc/: com.const.proto  com.protocol.proto  com.struct.proto  extensions_error_code.proto  svr.const.err.proto  svr.protocol.proto  svr.struct.proto  svr.table.proto
src/server_frame/router/: router_manager.h  router_manager_base.cpp  router_manager_base.h  router_manager_set.cpp  router_manager_set.h  router_object_base.cpp  router_object_base.h  router_player_cache.cpp  router_player_cache.h  router_player_manager.cpp  router_player_manager.h  router_system_defs.h
src/server_frame/router/action/: task_action_auto_save_objects.cpp  task_action_router_close_manager_set.cpp  task_action_router_close_manager_set.h  task_action_router_transfer.cpp  task_action_router_update.cpp
src/server_frame/rpc/: rpc_lru_cache_map.h  rpc_utils.cpp
src/server_frame/rpc/auth/: login.cpp  login.h
src/server_frame/rpc/db/: db_macros.h  db_utils.cpp  login.cpp  login.h  player.cpp  player.h  uuid.cpp  uuid.h
src/server_frame/rpc/game/: player.cpp  player.h
src/server_frame/utility/: ini_loader_helper.cpp  ini_loader_helper.h  protobuf_mini_dumper.cpp  protobuf_mini_dumper.h  rapid_json_helper.cpp  rapid_json_helper.h
src/tools/etcd-atproxy-ls/: CMakeLists.txt  main.cpp
src/tools/etcd-watcher/: CMakeLists.txt  main.cpp
src/tools/simulator/: CMakeLists.txt
src/tools/simulator/libsimulator_uv/: README.md  simulator_base.cpp  simulator_base.h  simulator_player_impl.h
src/tools/simulator/lua/cpp/lua_engine/: lua_binding_class.h  lua_binding_mgr.cpp  lua_binding_mgr.h  lua_binding_namespace.h  lua_binding_unwrapper.h  lua_binding_utils.cpp  lua_binding_utils.h  lua_binding_wrapper.h  lua_engine.cpp  lua_engine.h
src/tools/simulator/lua/cpp/lua_module/: lua_adaptor.h
src/tools/simulator/proto/player/: account.cpp
src/tools/simulator/utility/: client_player.cpp  client_player.h  client_simulator.cpp  client_simulator.h
(+24 files in other folders)
